# pycture

./: .gitignore  Makefile  README.md  pycture-complete.sh  pyproject.toml
pycture/: cli.py  constants.py  utils.py
